tests/coverage/misc/fail/early_errors/001_duplicate_proto_object_literal.js
// ECMA-262 §12.2.6.1 — __proto__ property used twice as an actual identifier
// key in the same object literal is a SyntaxError. (Computed/shorthand
// forms are allowed; these are literal identifier keys.)
const bad = { __proto__: 1, __proto__: 2 };
